--- a/html/docker.html
+++ b/html/docker.html
@@ -13,9 +13,17 @@
       <!--Card-->
       <div class="card animated fadeIn">
          <p class="subtitle">Основные Docker команды</p>
+      Docker (Докер) — это программное обеспечение с открытым исходным кодом для разработки, тестирования, доставки и запуска веб-приложений в средах с поддержкой контейнеризации.
          <ul>
-             <li>docker build -t image_name .</li>
-             <li>docker run -d image_name</li>
+             <li>docker run - Запуск контейнера.</li>
+             <li>docker ps - Просмотр запущенных контейнеров.</li>
+             <li>docker stop / docker start - Управление состоянием контейнера</li>
+             <li>docker exec - Вход в запущенный контейнер</li>
+             <li>docker build - Сборка образа из Dockerfile </li>
+             _____________________________________________
+             <li>docker --help - Справка по всем командам.</li>
+             <li>docker command --help - Справка по конкретной команде.</li>
+
          </ul>
       </div>
       <!--footer-->
