--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="html/git.html">Git</a>
          </p>
          <p class="location" align="center">
-            <a href="html/Docker.html">Основные Docker команды</a>
+            <a href="html/docker.html">Основные Docker команды</a>
          </p>
          <p> <br>
          </p>
